# 2024_kn240_oop_dmytro_kshivetskyi

./: .gitignore  README.md  exam.ipynb  requirements.txt
1_lab/: 2.py  README.md  README1.md  README2.md  anime.py
1_lab/pipenv_env/: 1.py  Abstraction.py  Animals.py  Bank.py  Incapsulation.py  Inheritance.py  Pipfile  Polymorphism.py  __main__.py  emoji_test.py
1_lab/poetry_env/: 1.py  main.py  pyproject.toml
1_lab/venv_env/: 1.py
1_semestr/1_lab/: 1.ipynb
1_semestr/init/: README.md
2_lab/: 1.csv  2.1.ipynb  2.2.ipynb  2.ipynb  README(with).md  README.md  __main__.py  cpu.py  my_module.py  test.txt  tqdm_test.ipynb  tqdm_test.py  write_file.py
3_lab/: 3.ipynb  README.md  my_class.py
3_lab/web_app/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
3_lab/web_app/src/web_app/: app.py
exam_06_06_2025/: app.py
