
[project]
name = "poetry-env"
version = "0.2.0"
description = "blablabla"
authors = [
    {name = "UraN9",email = "kwuvezzzkuy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (==2.31)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"

